--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,10 +56,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://13.49.44.168:8000}
+        REACT_APP_API_URL: ""
     container_name: portfolio_frontend
     environment:
-      REACT_APP_API_URL: ${REACT_APP_API_URL:-http://13.49.44.168:8000}
+      REACT_APP_API_URL: ""
     ports:
       - "3000:3000"
     depends_on:
